[package]
name = "optra"
version = "0.1.0"
authors = ["Daniel Yule <daniel.yule@gmail.com>"]
description = "An engine for remote file synchronization"
documentation = "https://dyule.github.io/optra/optra/"
homepage = "https://github.com/dyule/optra"
repository = "https://github.com/dyule/optra"
readme = "README.md"
keywords = ["ABST", "OT", "file-synchronization", "synchronization", "remote-files"]
license = "MIT"

[dependencies]
serde = "^0.8"
serde_json = "^0.8"
serde_macros = "^0.8"
log = "0.3"
rdiff = "^0.1.1"

[dev-dependencies]
env_logger = "0.3"
