[package]
name = "optra"
version = "0.2.1"
authors = ["Daniel Yule <daniel.yule@gmail.com>"]
description = "An engine for remote file synchronization"
documentation = "https://dyule.github.io/optra/optra/"
homepage = "https://github.com/dyule/optra"
repository = "https://github.com/dyule/optra"
readme = "README.md"
keywords = ["ABST", "OT", "file-synchronization", "synchronization", "remote-files"]
license = "MIT"

[dependencies]
log = "0.3"
rdiff = "0.1"
byteorder = "0.5"

[dev-dependencies]
env_logger = "0.3"
